--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==7.1.2
 cycler==0.10.0
 flake8==3.8.3
 Flask==1.1.2
+gunicorn==20.1.0
 idna==2.10
 isort==5.5.2
 itsdangerous==1.1.0
@@ -18,7 +19,7 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 matplotlib==3.3.4
 mccabe==0.6.1
-numpy==1.16.4
+numpy==1.20.0
 parso==0.7.1
 Pillow==8.1.0
 pluggy==0.13.1
@@ -33,7 +34,7 @@ python-language-server==0.35.1
 requests==2.25.1
 rope==0.17.0
 scikit-learn==0.23.1
-scipy==1.5.0
+scipy==1.6.0
 six==1.15.0
 sklearn==0.0
 snowballstemmer==2.0.0
